# mac-calendar-mcp

./: .gitignore  README.md  pyproject.toml  server.py  test.py
.github/workflows/: tests.yml
src/mac_calendar_mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_async_threading.py  test_calendar_server.py  test_date_parsing.py  test_edge_cases.py  test_enhanced_events.py  test_error_handling.py  test_mcp_integration.py  test_parity.py  test_permissions.py  test_reminders.py  test_rsvp_status.py  test_search.py  test_timezone_utils.py  test_today_summary.py
tests/fixtures/: expected_outputs.json  parity_scenarios.json
tests/mocks/: mock_eventkit.py
